--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,149 +29,162 @@
 
 <body>
     <!-- division for the registration form -->
-    <div class="form">
-        <!--registration form header-->
-        <div class="registrationFormHeader">
-            <h2>Registration</h2>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+            </div>
+            <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
+                <form>
+                    <!--registration form header-->
+                    <div class="registrationFormHeader">
+                        <h2>Registration</h2>
+                    </div>
+
+                    <!--registartion form body-->
+                    <div class="registrationFormBody">
+
+                        <div class="input form-group">
+                            <!--label for message-->
+                            <label class="error" id="wrongInput"> </label>
+                            <label>Name<span class="requiredField">*</span></label>
+                            <div class="box">
+                                <input id="name" class="formControl form-control" type="text" name="name" required>
+                            </div>
+                            <span class="error" id="wrongName"> </span>
+                        </div>
+
+                        <div class="input form-group">
+                            <label>Email<span class="requiredField">*</span></label>
+                            <div class="box">
+                                <input id="email" class="formControl" type="email" name="email" required>
+                            </div>
+                            <label class="error" id="wrongEmail"> </label>
+                        </div>
+
+                        <div class="input form-group">
+                            <label>Password<span class="requiredField">*</span></label>
+                            <div class="box">
+                                <input id="password" class="formControl" type="password" name="password" required>
+                            </div>
+                            <label class="error" id="wrongPassword"> </label>
+                        </div>
+
+                        <div class="input form-groups">
+                            <label>Address</label>
+                            <div class="box">
+                                <textarea id="address" class="formControl" name="address" placeholder="Parmanent Address"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="input">
+                            <label>Country Name</label>
+                            <div class="box">
+                                <select id="selectCountry" class="formControl" size="1">
+                                </select>
+                            </div>
+                        </div>
+
+                        <div id="stateName" class="input">
+                            <label>State Name</label>
+                            <div class="box">
+                                <select id="selectState" class="formControl" size="1">
+                                    <option value="" selected="selected">-- Select State--</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div id="cityName" class="input">
+                            <label>City Name</label>
+                            <div class="box">
+                                <select id="selectCity" class="formControl" size="1">
+                                    <option value="-1" selected="selected">-- Select City--</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="input">
+                            <label>Date of Birth</label>
+                            <div class="box">
+                                <input id="dateOfBirth" class="formControl" type="date" name="dateOfBirth">
+                            </div>
+                        </div>
+
+                        <div class="input">
+                            <label>Gender</label>
+                            <div class="box">
+                                <input type="radio" name="gender" value="Male" id="Male" checked> Male<br>
+                                <input type="radio" name="gender" value="Female" id="Female"> Female<br>
+                                <input type="radio" name="gender" value="Other" id="Other"> Other
+                            </div>
+                        </div>
+
+                        <div class="input">
+                            <label>Category</label>
+                            <div class="box">
+                                <select id="casteCatagory" class="formControl" name="casteCatagory">
+                                    <option id="Gen">Gen</option>
+                                    <option id="SC">SC</option>
+                                    <option id="ST">ST</option>
+                                    <option id="OBC">OBC</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="input">
+                            <label>Subject</label>
+                            <div class="box">
+                                <input type="checkbox" name="sub[]" value="PHP" id="PHP">PHP<br>
+                                <input type="checkbox" name="sub[]" value="JAVA" id="JAVA">JAVA<br>
+                                <input type="checkbox" name="sub[]" value="HTML" id="HTML">HTML<br>
+                                <input type="checkbox" name="sub[]" value="CSS" id="CSS">CSS
+                            </div>
+                        </div>
+
+                        <div class="input" id="registerButton">
+                            <center>
+                                <button type="button" name="registerButtonn" class="buttonDesign" id="registerButtonn">Register</button>
+                            </center>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+
+            </div>
         </div>
-        <!--registartion form body-->
-        <div class="registrationFormBody">
-            <div class="input">
-                <!--label for message-->
-                <label class="error" id="wrongInput"> </label>
-                <label>Name<span class="requiredField">*</span></label>
-                <div class="box">
-                    <input id="name" class="formControl" type="text" name="name" required>
-                </div>
-                <span class="error" id="wrongName"> </span>
-            </div>
 
-            <div class="input">
-                <label>Email<span class="requiredField">*</span></label>
-                <div class="box">
-                    <input id="email" class="formControl" type="email" name="email" required>
-                </div>
-                <label class="error" id="wrongEmail"> </label>
-            </div>
-
-            <div class="input">
-                <label>Password<span class="requiredField">*</span></label>
-                <div class="box">
-                    <input id="password" class="formControl" type="password" name="password" required>
-                </div>
-                <label class="error" id="wrongPassword"> </label>
-            </div>
-
-            <div class="input">
-                <label>Address</label>
-                <div class="box">
-                    <textarea id="address" class="formControl" name="address" placeholder="Parmanent Address"></textarea>
-                </div>
-            </div>
-
-            <div class="input">
-                <label>Country Name</label>
-                <div class="box">
-                    <select id="selectCountry" class="formControl" size="1">
-                    </select>
-                </div>
-            </div>
-
-            <div id="stateName" class="input">
-                <label>State Name</label>
-                <div class="box">
-                    <select id="selectState" class="formControl" size="1">
-                        <option value="" selected="selected">-- Select State--</option>
-                    </select>
-                </div>
-            </div>
-
-            <div id="cityName" class="input">
-                <label>City Name</label>
-                <div class="box">
-                    <select id="selectCity" class="formControl" size="1">
-                        <option value="-1" selected="selected">-- Select City--</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="input">
-                <label>Date of Birth</label>
-                <div class="box">
-                    <input id="dateOfBirth" class="formControl" type="date" name="dateOfBirth">
-                </div>
-            </div>
-
-            <div class="input">
-                <label>Gender</label>
-                <div class="box">
-                    <input type="radio" name="gender" value="Male" id="Male" checked> Male<br>
-                    <input type="radio" name="gender" value="Female" id="Female"> Female<br>
-                    <input type="radio" name="gender" value="Other" id="Other"> Other
-                </div>
-            </div>
-
-            <div class="input">
-                <label>Category</label>
-                <div class="box">
-                    <select id="casteCatagory" class="formControl" name="casteCatagory">
-                        <option id="Gen">Gen</option>
-                        <option id="SC">SC</option>
-                        <option id="ST">ST</option>
-                        <option id="OBC">OBC</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="input">
-                <label>Subject</label>
-                <div class="box">
-                    <input type="checkbox" name="sub[]" value="PHP" id="PHP">PHP<br>
-                    <input type="checkbox" name="sub[]" value="JAVA" id="JAVA">JAVA<br>
-                    <input type="checkbox" name="sub[]" value="HTML" id="HTML">HTML<br>
-                    <input type="checkbox" name="sub[]" value="CSS" id="CSS">CSS
-                </div>
-            </div>
-
-            <div class="input" id="registerButton">
-                <center>
-                    <button type="button" name="registerButtonn" class="buttonDesign" id="registerButtonn">Register</button>
-                </center>
+        <!-- division for display the data -->
+        <div class="row">
+            <div id="display" class="table-responsive col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <table id="registrationTable" class="table table-hover">
+                    <tr>
+                        <th class="tableHead">Name</th>
+                        <th class="tableHead">Email</th>
+                        <th class="tableHead">Password</th>
+                        <th class="tableHead">Address</th>
+                        <th class="tableHead">Country</th>
+                        <th class="tableHead">State</th>
+                        <th class="tableHead">City</th>
+                        <th class="tableHead">DOB</th>
+                        <th class="tableHead">Gender</th>
+                        <th class="tableHead">Catagory</th>
+                        <th class="tableHead">Subject</th>
+                        <th class="tableHead">Options</th>
+                    </tr>
+                    <tbody id="tableData">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-    <!-- division for display the data -->
-    <div id="dataTable" style="font-size:18px;text-align:center; width: 100%;">
-        <div id="display">
-            <table id="registrationTable" class="table table-hover">
-                <tr>
-                    <th class="tableHead">Name</th>
-                    <th class="tableHead">Email</th>
-                    <th class="tableHead">Password</th>
-                    <th class="tableHead">Address</th>
-                    <th class="tableHead">Country</th>
-                    <th class="tableHead">State</th>
-                    <th class="tableHead">City</th>
-                    <th class="tableHead">DOB</th>
-                    <th class="tableHead">Gender</th>
-                    <th class="tableHead">Catagory</th>
-                    <th class="tableHead">Subject</th>
-                    <th class="tableHead">Options</th>
-                </tr>
-                <tbody id="tableData">
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../JS/data.js"></script>
     <script src="../JS/registration-script.js"></script>
     <script src="../JS/countries-data.js"></script>
     <script src="../JS/field-validation.js"></script>
     <script src="../JS/table-operation.js"></script>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
