--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,7 @@
 <!--
 * File Name  : index
 * Description : html code to design a registration form and a table to show the data 
-* Created date : 18/01/2019
+* Created date : 21/01/2019
 * Author  : Md Wasif Ali
 * Comments : whole page is divided into to division: 1 for the registration form, another one for the table
 -->
@@ -36,7 +36,7 @@
             <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
                 <form>
                     <!--registration form header-->
-                    <div class="registrationFormHeader">
+                    <div class="registrationFormHeader form-group">
                         <h2>Registration</h2>
                     </div>
 
@@ -48,7 +48,8 @@
                             <label class="error" id="wrongInput"> </label>
                             <label>Name<span class="requiredField">*</span></label>
                             <div class="box">
-                                <input id="name" class="formControl form-control" type="text" name="name" required>
+                                <input id="name" class=" form-control formControl" type="text" name="name" data-validation=
+                                "length required" data-validation-length="min2">
                             </div>
                             <span class="error" id="wrongName"> </span>
                         </div>
@@ -56,7 +57,7 @@
                         <div class="input form-group">
                             <label>Email<span class="requiredField">*</span></label>
                             <div class="box">
-                                <input id="email" class="formControl" type="email" name="email" required>
+                                <input id="email" class="formControl form-control" type="email" name="email" required>
                             </div>
                             <label class="error" id="wrongEmail"> </label>
                         </div>
@@ -64,64 +65,66 @@
                         <div class="input form-group">
                             <label>Password<span class="requiredField">*</span></label>
                             <div class="box">
-                                <input id="password" class="formControl" type="password" name="password" required>
+                                <input id="password" class="formControl form-control" type="password" name="password"
+                                    required>
                             </div>
                             <label class="error" id="wrongPassword"> </label>
                         </div>
 
-                        <div class="input form-groups">
+                        <div class="input form-group">
                             <label>Address</label>
                             <div class="box">
-                                <textarea id="address" class="formControl" name="address" placeholder="Parmanent Address"></textarea>
+                                <textarea id="address" class="formControl addressScrool form-control" name="address"
+                                    placeholder="Parmanent Address"></textarea>
                             </div>
                         </div>
 
-                        <div class="input">
+                        <div class="input form-group" id="countryName">
                             <label>Country Name</label>
                             <div class="box">
-                                <select id="selectCountry" class="formControl" size="1">
+                                <select id="selectCountry" class=" form-control formControl" size="1">
                                 </select>
                             </div>
                         </div>
 
-                        <div id="stateName" class="input">
+                        <div id="stateName" class="input form-group">
                             <label>State Name</label>
                             <div class="box">
-                                <select id="selectState" class="formControl" size="1">
+                                <select id="selectState" class="formControl form-control" size="1">
                                     <option value="" selected="selected">-- Select State--</option>
                                 </select>
                             </div>
                         </div>
 
-                        <div id="cityName" class="input">
+                        <div id="cityName" class="input form-group">
                             <label>City Name</label>
                             <div class="box">
-                                <select id="selectCity" class="formControl" size="1">
+                                <select id="selectCity" class="formControl form-control" size="1">
                                     <option value="-1" selected="selected">-- Select City--</option>
                                 </select>
                             </div>
                         </div>
 
-                        <div class="input">
+                        <div class="input form-group">
                             <label>Date of Birth</label>
                             <div class="box">
-                                <input id="dateOfBirth" class="formControl" type="date" name="dateOfBirth">
+                                <input id="dateOfBirth" class="formControl form-control" type="date" name="dateOfBirth">
                             </div>
                         </div>
 
-                        <div class="input">
+                        <div class="input form-group">
                             <label>Gender</label>
-                            <div class="box">
-                                <input type="radio" name="gender" value="Male" id="Male" checked> Male<br>
-                                <input type="radio" name="gender" value="Female" id="Female"> Female<br>
+                            <div class=" box ">
+                                <input type="radio" name="gender" value="Male" id="Male" checked> Male
+                                <input type="radio" name="gender" value="Female" id="Female"> Female
                                 <input type="radio" name="gender" value="Other" id="Other"> Other
                             </div>
                         </div>
 
-                        <div class="input">
+                        <div class="input form-group">
                             <label>Category</label>
-                            <div class="box">
-                                <select id="casteCatagory" class="formControl" name="casteCatagory">
+                            <div class="box ">
+                                <select id="casteCatagory" class="formControl form-control" name="casteCatagory">
                                     <option id="Gen">Gen</option>
                                     <option id="SC">SC</option>
                                     <option id="ST">ST</option>
@@ -130,19 +133,20 @@
                             </div>
                         </div>
 
-                        <div class="input">
+                        <div class="input form-group">
                             <label>Subject</label>
                             <div class="box">
-                                <input type="checkbox" name="sub[]" value="PHP" id="PHP">PHP<br>
-                                <input type="checkbox" name="sub[]" value="JAVA" id="JAVA">JAVA<br>
-                                <input type="checkbox" name="sub[]" value="HTML" id="HTML">HTML<br>
+                                <input type="checkbox" name="sub[]" value="PHP" id="PHP">PHP
+                                <input type="checkbox" name="sub[]" value="JAVA" id="JAVA">JAVA
+                                <input type="checkbox" name="sub[]" value="HTML" id="HTML">HTML
                                 <input type="checkbox" name="sub[]" value="CSS" id="CSS">CSS
                             </div>
                         </div>
 
-                        <div class="input" id="registerButton">
+                        <div class="input form-group" id="registerButton">
                             <center>
-                                <button type="button" name="registerButtonn" class="buttonDesign" id="registerButtonn">Register</button>
+                                <button type="button" name="registerButtonn" class="btn btn-default buttonDesign " id=
+                                "registerButtonn">Register</button>
                             </center>
                         </div>
                     </div>
@@ -181,7 +185,8 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../JS/data.js"></script>
-    <script src="../JS/registration-script.js"></script>
+    <script src="../JS/init-registration-script.js"></script>
+    <script src="../JS/form-operation.js"></script>
     <script src="../JS/countries-data.js"></script>
     <script src="../JS/field-validation.js"></script>
     <script src="../JS/table-operation.js"></script>
