--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
@@ -182,16 +181,20 @@
             </div>
         </div>
     </div>
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="../bootstrap/js/bootstrap.min.js"></script>
+
     <script src="../JS/data.js"></script>
+    <script src="../JS/global-variable.js"></script>
     <script src="../JS/init-registration-script.js"></script>
     <script src="../JS/form-operation.js"></script>
     <script src="../JS/countries-data.js"></script>
     <script src="../JS/field-validation.js"></script>
     <script src="../JS/table-operation.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../bootstrap/js/bootstrap.min.js"></script>
+    
 </body>
 
 </html>
