--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,7 +33,7 @@
             <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
             </div>
             <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
-                <form>
+                <form id="registarForm">
                     <!--registration form header-->
                     <div class="registrationFormHeader form-group">
                         <h2>Registration</h2>
@@ -56,7 +56,7 @@
                         <div class="input form-group">
                             <label>Email<span class="requiredField">*</span></label>
                             <div class="box">
-                                <input id="email" class="formControl form-control" type="email" name="email" required>
+                                <input id="email" class="formControl form-control" type="email" name="email">
                             </div>
                             <label class="error" id="wrongEmail"> </label>
                         </div>
@@ -64,8 +64,7 @@
                         <div class="input form-group">
                             <label>Password<span class="requiredField">*</span></label>
                             <div class="box">
-                                <input id="password" class="formControl form-control" type="password" name="password"
-                                    required>
+                                <input id="password" class="formControl form-control" type="password" name="password">
                             </div>
                             <label class="error" id="wrongPassword"> </label>
                         </div>
@@ -81,7 +80,8 @@
                         <div class="input form-group" id="countryName">
                             <label>Country Name</label>
                             <div class="box">
-                                <select id="selectCountry" class=" form-control formControl" size="1">
+                                <select name="country" id="country" class=" form-control formControl">
+                                        <option value="" selected="selected">-- Select Country--</option>
                                 </select>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                         <div id="stateName" class="input form-group">
                             <label>State Name</label>
                             <div class="box">
-                                <select id="selectState" class="formControl form-control" size="1">
+                                <select name="state" id="state" class="formControl form-control">
                                     <option value="" selected="selected">-- Select State--</option>
                                 </select>
                             </div>
@@ -98,8 +98,8 @@
                         <div id="cityName" class="input form-group">
                             <label>City Name</label>
                             <div class="box">
-                                <select id="selectCity" class="formControl form-control" size="1">
-                                    <option value="-1" selected="selected">-- Select City--</option>
+                                <select name="city" id="city" class="formControl form-control">
+                                    <option value="" selected="selected">-- Select City--</option>
                                 </select>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
 
                         <div class="input form-group" id="registerButton">
                             <center>
-                                <button type="button" name="registerButtonn" class="btn btn-default buttonDesign " id=
+                                <button  name="registerButtonn" class="btn btn-default buttonDesign " id=
                                 "registerButtonn">Register</button>
                             </center>
                         </div>
@@ -185,14 +185,15 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!--pligin-->
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-
-    <script src="../JS/data.js"></script>
     <script src="../JS/global-variable.js"></script>
     <script src="../JS/init-registration-script.js"></script>
     <script src="../JS/form-operation.js"></script>
     <script src="../JS/countries-data.js"></script>
-    <script src="../JS/field-validation.js"></script>
+    <!--<script src="../JS/field-validation.js"></script>-->
+    <script src="../JS/form-validation.js"></script>
     <script src="../JS/table-operation.js"></script>
     
 </body>
