initial data loaded on the table

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -187,9 +187,10 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
     <script src="../JS/global-variable.js"></script>
+    <script src="../JS/countries-data.js"></script>
+    <script src="../JS/show-user-data.js"></script>
     <script src="../JS/init-registration-script.js"></script>
     <script src="../JS/form-operation.js"></script>
-    <script src="../JS/countries-data.js"></script>
     <script src="../JS/form-validation.js"></script>
     <script src="../JS/table-operation.js"></script>
 
